--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -15,6 +15,7 @@ jobs:
       run: |
         npm install
         npm run-script build
+        cd dist && cp index.html 404.html
     - name: Deploy
       uses: JamesIves/github-pages-deploy-action@releases/v3
       with:
