--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -14,7 +14,7 @@ jobs:
     - name: Build
       run: |
         npm install
-        npm run-script build
+        npm run build
         cd dist && cp index.html 404.html
     - name: Deploy
       uses: JamesIves/github-pages-deploy-action@releases/v3
