--- a/package.json
+++ b/package.json
@@ -8,32 +8,34 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "gsap": "^2.1.2",
+    "cache-loader": "^4.1.0",
+    "gsap": "^3.0.1",
     "nprogress": "^0.2.0",
     "scrollmagic": "^2.0.6",
     "scrollmagic-plugin-gsap": "^1.0.3",
+    "underscore": "^1.8.3",
     "vue": "^2.6.6",
-    "vue-analytics": "^5.16.4",
-	"underscore": "^1.8.3"
+    "vue-gtag": "^1.16.1"
   },
   "devDependencies": {
     "@gfx/zopfli": "^1.0.11",
     "@vue/cli-plugin-babel": "^3.7.0",
-    "@vue/cli-plugin-eslint": "^3.7.0",
-    "@vue/cli-service": "^3.7.0",
+    "@vue/cli-plugin-eslint": "^3.1.1",
+    "@vue/cli-service": "^4.5.13",
     "@vue/eslint-config-airbnb": "^4.0.0",
     "@vue/eslint-config-prettier": "^4.0.1",
     "babel-eslint": "^10.0.1",
-    "compression-webpack-plugin": "^2.0.0",
+    "compression-webpack-plugin": "^6.0.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "fibers": "^4.0.1",
-    "node-sass": "^4.12.0",
+    "node-sass": "^6.0.1",
     "sass": "^1.19.0",
-    "sass-loader": "^7.1.0",
+    "sass-loader": "^8.0.0",
     "vue-router": "^3.0.6",
     "vue-template-compiler": "^2.5.21",
-    "workbox-webpack-plugin": "^4.3.1"
+    "webpack": "^4.46.0",
+    "workbox-webpack-plugin": "^6.2.4"
   },
   "description": "This is my portfolio - strsx",
   "main": "babel.config.js",
