--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -10,7 +10,9 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2
-    - uses: actions/setup-node@v2
+      
+    - name: Use specific node version
+      uses: actions/setup-node@v2
       with:
         node-version: '14'
 
@@ -19,6 +21,7 @@ jobs:
         npm install
         npm run build
         cd dist && cp index.html 404.html
+        
     - name: Deploy
       uses: JamesIves/github-pages-deploy-action@releases/v3
       with:
