--- a/package.json
+++ b/package.json
@@ -3,39 +3,36 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "cross-env NODE_OPTIONS=--openssl-legacy-provider vue-cli-service serve --skip-plugins @vue/cli-plugin-eslint",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "cache-loader": "^4.1.0",
-    "gsap": "^3.6.1",
+    "gsap": "^3.12.5",
     "nprogress": "^0.2.0",
-    "scrollmagic": "^2.0.6",
+    "scrollmagic": "^2.0.8",
     "scrollmagic-plugin-gsap": "^1.0.3",
-    "underscore": "^1.8.3",
-    "vue": "^2.6.6",
-    "vue-gtag": "^1.16.1"
+    "underscore": "^1.13.6",
+    "vue": "^3.4.15",
+    "vue-gtag": "^2.0.0",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.23.3",
     "@gfx/zopfli": "^1.0.11",
-    "@vue/cli-plugin-babel": "^3.7.0",
-    "@vue/cli-plugin-eslint": "^3.1.1",
-    "@vue/cli-service": "^4.5.13",
-    "@vue/eslint-config-airbnb": "^4.0.0",
-    "@vue/eslint-config-prettier": "^4.0.1",
-    "babel-eslint": "^10.0.1",
-    "compression-webpack-plugin": "^6.0.1",
-    "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
-    "fibers": "^4.0.1",
-    "node-sass": "^6.0.1",
-    "sass": "^1.19.0",
-    "sass-loader": "^8.0.0",
-    "vue-router": "^3.0.6",
-    "vue-template-compiler": "^2.5.21",
-    "webpack": "^4.46.0",
-    "workbox-webpack-plugin": "^6.2.4"
+    "@vue/cli-plugin-babel": "~5.0.8",
+    "@vue/cli-plugin-eslint": "~5.0.8",
+    "@vue/cli-service": "~5.0.8",
+    "@vue/eslint-config-airbnb": "^7.0.1",
+    "@vue/eslint-config-prettier": "^8.0.0",
+    "compression-webpack-plugin": "^10.0.0",
+    "cross-env": "^7.0.3",
+    "eslint": "^8.56.0",
+    "eslint-plugin-vue": "^9.21.1",
+    "sass": "^1.70.0",
+    "sass-loader": "^14.1.0",
+    "webpack": "^5.90.1",
+    "workbox-webpack-plugin": "^7.0.0"
   },
   "description": "This is my portfolio - strsx",
   "main": "babel.config.js",
